Added Sign Up Page

--- a/auth/signup.html
+++ b/auth/signup.html
@@ -19,7 +19,71 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 </head>
 <body>
-
+    <header>
+        <div class="signup-header text-center">
+            <h1>WAKACHURCH</h1>
+            <h3 class="">Join Wakachurch Now!</h3>
+            <p class="font-weight-lighter">It's Free</p>
+        </div>
+        <div class="signup-form">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4"></div>
+                    <div class="col-lg-4">
+                        <form action="" method="POST" class="text-center">
+                            <div class="text-left form-group">
+                                <label for="inlineFormInputGroupUsername2">First Name</label>
+                                <div class="input-group mb-2 mr-sm-2">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text"><i class="far fa-user"></i></div>
+                                    </div>
+                                    <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="">
+                                </div>  
+                            </div>
+                            <div class="text-left form-group">
+                                <label for="inlineFormInputGroupUsername2">Second Name</label>
+                                <div class="input-group mb-2 mr-sm-2">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text"><i class="far fa-user"></i></div>
+                                    </div>
+                                    <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="">
+                                </div>  
+                            </div>                          
+                            <div class="text-left form-group">
+                                <label class="" for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" required id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                            </div>
+                            <div class="text-left form-group">
+                                <label class="" for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" required id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <div class="form-group text-left">
+                                <label for="inputState">Select Church</label>
+                                <select id="inputState" class="form-control">
+                                    <option selected>Choose...</option>
+                                    <option>...</option>
+                                </select>
+                            </div> 
+                            <div class="text-left form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">My Church Not Listed</label>   
+                            </div>                                                        
+                            <div class="text-left form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">I hereby agree to the <span class="text-danger"><a href="#" class="text-danger">Terms and Condition</a></span></label>   
+                            </div>                           
+                            <button type="submit" class="btn btn-dark">Sign in</button>
+                        </form>
+                        <div class="mt-5 text-center">
+                            <p class="btn btn-secondary">Already have an account? <a class="text-danger" href="#"> Log in</a></p>
+                        </div>                        
+                    </div>
+                    <div class="col-lg-4"></div>
+                </div>                
+                
+            </div>
+        </div>
+    </header>
 </body>
 
 
