--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link pl-1" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link pl-1" href="#">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Add Event</a>
+                    <a class="nav-link pl-1" href="#">Add Event</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Add Ministry</a>
+                    <a class="nav-link pl-1" href="#">Add Ministry</a>
                 </li>
-                <li class="nav-link mr-3 p-0">
+                <li class="nav-link pl-1 pt-1 mr-3 p-0">
                     <a href="auth/login.html" class="btn btn-danger ">Login</a>
                 </li>
-                <li class="nav-link p-0">
-                    <a href="" class="btn btn-success">Sign Up</a>
+                <li class="nav-link pl-1 pt-1 p-0">
+                    <a href="auth/signup.html" class="btn btn-success">Sign Up</a>
                 </li>
                 </ul>
                 
@@ -64,35 +64,38 @@
             <div class="header-sub-text">
                 <p class="text-center">Find Churches, choirs, bands & friends</p>
             </div>
-            <div class="brand">      
-                <div class="row w-100">
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-1 col-6 col-sm-6">
-                        <div class="text-center">
-                            <i class="fas mb-4 fa-church fa-5x"></i>
-                            <p>Churches</p>
+            <div class="brand">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-2"></div>
+                        <div class="col-lg-2 col-6 col-sm-6">
+                            <div class="text-center">
+                                <i class="fas mb-4 fa-church fa-5x"></i>
+                                <p>Churches</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-1 col-6 col-sm-6">
-                        <div class="text-center">
-                            <i class="fas mb-4 fa-5x fa-podcast"></i>
-                            <p>Choirs</p>
+                        <div class="col-lg-2 col-6 col-sm-6">
+                            <div class="text-center">
+                                <i class="fas mb-4 fa-5x fa-podcast"></i>
+                                <p>Choirs</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-1 col-6 col-sm-6">
-                        <div class="text-center">
-                            <i class="fas mb-4 fa-5x fa-compact-disc"></i>
-                            <p>Bands</p>
+                        <div class="col-lg-2 col-6 col-sm-6">
+                            <div class="text-center">
+                                <i class="fas mb-4 fa-5x fa-compact-disc"></i>
+                                <p>Bands</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-1 col-6 col-sm-6">
-                        <div class="text-center">
-                            <i class="fas mb-4 fa-5x fa-calendar-alt"></i>
-                            <p>Events</p>
+                        <div class="col-lg-2 col-6 col-sm-6">
+                            <div class="text-center">
+                                <i class="fas mb-4 fa-5x fa-calendar-alt"></i>
+                                <p>Events</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4"></div>
-                </div>
+                        <div class="col-lg-2"></div>
+                    </div>                    
+                </div>      
+
             </div>
             <div class="search">
                 <div class="container">
@@ -1424,7 +1427,8 @@
                 <div class="text-center pt-3">
                     <p class="mb-0 pb-2"><strong>Copyright</strong> &copy; 2019 Wakachurch</p>
                 </div>
-            </div>            
+            </div>
+            <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a> 
         </footer>              
     </main>
 </body>    
