--- a/auth/signup.html
+++ b/auth/signup.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="signup.css">
     <!-- Googel Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500" rel="stylesheet">
     <!-- Font-awesome -->
