--- a/index.html
+++ b/index.html
@@ -736,12 +736,12 @@
                 <div class="row mt-5 pb-5">
                     <div class="col-lg-6">
                         <div class="row mt-5 w-box">
-                            <div class="col-6 col-img">
+                            <div class="col-md-6 col-img">
                                 <div>
                                     <img class="p-1 w-100" src="https://source.unsplash.com/LSgWFMoRg2Y/170x120" alt="">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <div class="pt-1">
                                     <p class="chr-time mb-0">8:00 AM - 11:00 PM</p>                                    
                                     <p class="chr-name mb-1">The Elevation Church</p>
@@ -763,12 +763,12 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="row mt-5 w-box">
-                            <div class="col-6 col-img">
+                            <div class="col-md-6 col-img">
                                 <div>
                                     <img class="p-1 w-100" src="https://source.unsplash.com/LSgWFMoRg2Y/170x120" alt="">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <div class="pt-1">
                                     <p class="chr-time mb-0">8:00 AM - 11:00 PM</p>                                    
                                     <p class="chr-name mb-1">The Elevation Church</p>
@@ -790,12 +790,12 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="row mt-5 w-box">
-                            <div class="col-6 col-img">
+                            <div class="col-md-6 col-img">
                                 <div>
                                     <img class="p-1 w-100" src="https://source.unsplash.com/LSgWFMoRg2Y/170x120" alt="">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <div class="pt-1">
                                     <p class="chr-time mb-0">8:00 AM - 11:00 PM</p>                                    
                                     <p class="chr-name mb-1">The Elevation Church</p>
@@ -817,12 +817,12 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="row mt-5 w-box">
-                            <div class="col-6 col-img">
+                            <div class="col-md-6 col-img">
                                 <div>
                                     <img class="p-1 w-100" src="https://source.unsplash.com/LSgWFMoRg2Y/170x120" alt="">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <div class="pt-1">
                                     <p class="chr-time mb-0">8:00 AM - 11:00 PM</p>                                    
                                     <p class="chr-name mb-1">The Elevation Church</p>
@@ -857,12 +857,12 @@
                 <div class="row mt-5 pb-5">
                     <div class="col-lg-6">
                         <div class="row mt-5 w-box">
-                            <div class="col-6 col-img">
+                            <div class="col-md-6 col-img">
                                 <div>
                                     <img class="p-1 w-100" src="https://source.unsplash.com/LSgWFMoRg2Y/170x120" alt="">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <div class="pt-1">
                                     <p class="chr-time mb-0">8:00 AM - 11:00 PM</p>                                    
                                     <p class="chr-name mb-1">The Elevation Church</p>
@@ -884,12 +884,12 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="row mt-5 w-box">
-                            <div class="col-6 col-img">
+                            <div class="col-md-6 col-img">
                                 <div>
                                     <img class="p-1 w-100" src="https://source.unsplash.com/LSgWFMoRg2Y/170x120" alt="">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <div class="pt-1">
                                     <p class="chr-time mb-0">8:00 AM - 11:00 PM</p>                                    
                                     <p class="chr-name mb-1">The Elevation Church</p>
@@ -911,12 +911,12 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="row mt-5 w-box">
-                            <div class="col-6 col-img">
+                            <div class="col-md-6 col-img">
                                 <div>
                                     <img class="p-1 w-100" src="https://source.unsplash.com/LSgWFMoRg2Y/170x120" alt="">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <div class="pt-1">
                                     <p class="chr-time mb-0">8:00 AM - 11:00 PM</p>                                    
                                     <p class="chr-name mb-1">The Elevation Church</p>
@@ -938,12 +938,12 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="row mt-5 w-box">
-                            <div class="col-6 col-img">
+                            <div class="col-md-6 col-img">
                                 <div>
                                     <img class="p-1 w-100" src="https://source.unsplash.com/LSgWFMoRg2Y/170x120" alt="">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <div class="pt-1">
                                     <p class="chr-time mb-0">8:00 AM - 11:00 PM</p>                                    
                                     <p class="chr-name mb-1">The Elevation Church</p>
