--- a/auth/signup.html
+++ b/auth/signup.html
@@ -41,7 +41,7 @@
                                 </div>  
                             </div>
                             <div class="text-left form-group">
-                                <label for="inlineFormInputGroupUsername2">Second Name</label>
+                                <label for="inlineFormInputGroupUsername2">Last Name</label>
                                 <div class="input-group mb-2 mr-sm-2">
                                     <div class="input-group-prepend">
                                         <div class="input-group-text"><i class="far fa-user"></i></div>
@@ -66,13 +66,13 @@
                             </div> 
                             <div class="text-left form-group form-check">
                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">My Church Not Listed</label>   
+                                <label class="form-check-label" for="exampleCheck1">My Church Not Listed ?</label>   
                             </div>                                                        
                             <div class="text-left form-group form-check">
                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                 <label class="form-check-label" for="exampleCheck1">I hereby agree to the <span class="text-danger"><a href="#" class="text-danger">Terms and Condition</a></span></label>   
                             </div>                           
-                            <button type="submit" class="btn btn-dark">Sign in</button>
+                            <button type="submit" class="btn btn-dark">Sign Up</button>
                         </form>
                         <div class="mt-5 text-center">
                             <p class="btn btn-secondary">Already have an account? <a class="text-danger" href="#"> Log in</a></p>
