--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand pl-4 pt-0 pb-0" href="#">WakaChurch</a>
+            <a class="navbar-brand pl-1 pt-0 pb-0" href="/">
+                <img src="logo.png" alt="site-logo" class="" width="365" height="87" class="d-inline-block align-top">
+            </a>
             
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav ml-auto pr-4 pt-3 pb-3 mt-2 mt-lg-0">
@@ -60,7 +62,7 @@
         </nav>
         <div class="header">
             <div class="header-text">
-                <h1 class="text-center pl-2 pr-2">Welcome To <span>Wakachurch</span></h1>
+                <h1 class="text-center pl-2 pr-2">Welcome to <span>Wakachurch</span></h1>
             </div>
             <div class="header-sub-text">
                 <p class="text-center">Find Churches, choirs, bands & friends</p>
