--- a/auth/signup.html
+++ b/auth/signup.html
@@ -52,6 +52,7 @@
                             <div class="text-left form-group">
                                 <label class="" for="exampleInputEmail1">Email address</label>
                                 <input type="email" class="form-control" required id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                             </div>
                             <div class="text-left form-group">
                                 <label class="" for="exampleInputPassword1">Password</label>
