--- a/auth/login.html
+++ b/auth/login.html
@@ -41,7 +41,7 @@
                             <div class="text-left form-group form-check">
                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                 <label class="form-check-label" for="exampleCheck1">Remember Me</label>
-                                <span class="float-right text-danger">? Forgotten Password</span>
+                                <span class="float-right text-danger">Forgotten Password?</span>
                             </div>
                             <button type="submit" class="btn btn-danger">Sign in</button>
                         </form>
