--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand pl-1 pt-0 pb-0" href="/">
-                <img src="logo.png" alt="site-logo" class="" width="365" height="87" class="d-inline-block align-top">
+            <a class="navbar-brand pl-3 pt-0 pb-0" href="/">
+                <img src="logo.png" alt="site-logo" class="" width="200" height="55" class="d-inline-block align-top">
             </a>
             
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -289,7 +289,7 @@
             <div class="container">
                 <div class="pt-5 text-center">
                     <h1 class="">
-                        <span>How <strong>Waka Church</strong>  works?</span>
+                        <span style="line-height: 4.0rem;">How <strong>Waka Church</strong>  works?</span>
                     </h1>
                     <p class="mt-5 lead">All The Benefits You Can Get At Your Fingertips</p>
                 </div>
@@ -326,7 +326,7 @@
         <section id="section2">
             <div class="explore-states">
                 <div class="text-center">
-                    <h1>Explore States</h1>
+                    <h1 class="text-purple mb-3">Explore States</h1>
                     <p>Browse through different churches, choirs, bands and events in your vicinty</p>
                 </div>
                 <div class="state-images mt-5">
@@ -401,13 +401,13 @@
         <section id="section3">
             <div class="">
                 <div class="add-ministry">
-                    <div class="container text-uppercase add-ministry-sub text-justify pt-4 pb-4">
-                        <h1 class="h1 text-center mb-5">ADD MINISTRY</h1>
+                    <div class="container add-ministry-sub text-justify pt-4 pb-4">
+                        <h1 class="h1 text-center text-uppercase mb-5">ADD MINISTRY</h1>
                         <p>You don't have to walk many miles beforeyou find a Bible believeing Church to call your home</p>
                         <p>Just sit back and browse through our various list of Churches, you can also find nearby churches to save your stress of going too far</p>
                         <p>Do you have an event coming up? Own a tight Live Band? IS your choir really dope that they deserve recognition? OWn a ministry or just started one? Don't worry, We got you!</p>
                         <p>Adding your listing to wakachurch is very fast and super easy. Let visitors see your Church, Choir, Bands & Events first when they browse through wakachurch</p>
-                        <p class="font-weight-bold text-center mt-5">We bring the people closer to Church</p>
+                        <p class="font-weight-bold text-center mt-5">We bring the people closer to the Church</p>
                         <div class="text-center mx-auto mt-5">
                             <a href="#" class="btn d-inline btn-warning mr-3">Add Ministry</a>
                             <a href="#" class="btn d-inline btn-warning">Add Event</a>
@@ -421,7 +421,7 @@
         <section id="section-4">
             <div class="container">
                 <div class="p-t-w text-center">
-                    <h1>Great Places To Worship</h1>
+                    <h1 class="text-purple mb-5">Great Places To Worship</h1>
                     <h6>Connect with a bible believing church and get closer to God with ease</h6>
                 </div>
                 <div class="row mt-5 pb-5">
@@ -450,7 +450,7 @@
                                     </p>                
                                 </div>
                             </div>
-                        </div>>
+                        </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="row mt-5 w-box">
@@ -542,8 +542,8 @@
         <section id="section-5">
             <div class="container">
                 <div class="p-t-w text-center">
-                    <h1>Experience Worship</h1>
-                    <h6>Love Praise and Worship? Why not checkout these Dope Choirs</h6>
+                    <h1 class="mb-5">Experience Worship</h1>
+                    <h6 class="text-purple">Love Praise and Worship? Why not checkout these Dope Choirs</h6>
                 </div>
                 <div class="row mt-5 pb-5">
                     <div class="col-lg-6">
@@ -663,7 +663,7 @@
         <section id="section-6">
             <div class="container">
                 <div class="discover-header text-center">
-                    <h1>Discover New Churches, Choirs and Bands</h1>
+                    <h1 class="text-purple mb-5">Discover New Churches, Choirs and Bands</h1>
                     <h6>Discover and follow churches, choirs & bands</h6>
                 </div>
             </div>
@@ -733,8 +733,8 @@
         <section id="section-7">
             <div class="container">
                 <div class="sunday-worship-header text-center">
-                    <h1>Next Sunday Worship</h1>
-                    <h6>Looking for a place to hear undiluted word of God? Why not checkout these Bible believing Churches</h6>
+                    <h1 class="mb-5">Next Sunday Worship</h1>
+                    <h6 class="text-purple">Looking for a place to hear undiluted word of God? Why not checkout these Bible believing Churches</h6>
                 </div>
                 <div class="row mt-5 pb-5">
                     <div class="col-lg-6">
@@ -854,7 +854,7 @@
         <section id="section-8">
             <div class="container">
                 <div class="p-t-w text-center">
-                    <h1>Expereince Live Music</h1>
+                    <h1 class="text-purple mb-5">Expereince Live Music</h1>
                     <h6>Have an event coming up? Why not checkout these awesome live bands!</h6>
                 </div>
                 <div class="row mt-5 pb-5">
@@ -975,8 +975,8 @@
         <section id="section-9">
             <div class="container">
                 <div class="discover-header text-center">
-                    <h1>Discover New Churches, Choirs and Bands</h1>
-                    <h6>Discover and follow churches, choirs & bands</h6>
+                    <h1 class="mb-5">Discover New Churches, Choirs and Bands</h1>
+                    <h6 class="text-purple">Discover and follow churches, choirs & bands</h6>
                 </div>
             </div>
             <div class="container">
@@ -1088,7 +1088,7 @@
         <section id="section-11">
             <div class="container">
                 <div class="sunday-worship-header text-center">
-                    <h1>Events For You</h1>
+                    <h1 class="text-purple mb-5">Events For You</h1>
                     <h6>Discover upcoming and ongoing events near you</h6>
                 </div>
                 <div class="sunday-worship-body row">
