--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand pl-3 pt-0 pb-0" href="/">
+            <a class="navbar-brand m-0 p-0 pt-0 pb-0" href="index.html">
                 <img src="logo.png" alt="site-logo" class="" width="200" height="55" class="d-inline-block align-top">
             </a>
             
@@ -107,10 +107,10 @@
                             <a class="nav-link active" id="listing-tab" data-toggle="tab" href="#listing" role="tab" aria-controls="home" aria-selected="true"><i class="fas fa-list-alt"></i> Listing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="friends-tab" data-toggle="tab" href="#friends" role="tab" aria-controls="profile" aria-selected="false"><i class="far fa-calendar-alt"></i> Events</a>
+                            <a class="nav-link" id="events-tab" data-toggle="tab" href="#events" role="tab" aria-controls="profile" aria-selected="false"><i class="far fa-calendar-alt"></i> Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="events-tab" data-toggle="tab" href="#events" role="tab" aria-controls="contact" aria-selected="false"><i class="fas fa-user-friends"></i> Friends</a>
+                            <a class="nav-link" id="friends-tab" data-toggle="tab" href="#friends" role="tab" aria-controls="contact" aria-selected="false"><i class="fas fa-user-friends"></i> Friends</a>
                         </li>
                     </ul>
                 </div>
@@ -129,13 +129,45 @@
                                         <div class="col-lg-3">
                                             <div>
                                                 <p>Where to look for?</p>
-                                                <select name="category" id="" class="w-100">
+                                                <select name="State" id="" class="w-100">
                                                     <option value="">Select State</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
+                                                    <option value="Lagos">Lagos</option>
+                                                    <option value="Oyo">Oyo</option>
+                                                    <option value="Kaduna">Kaduna</option>
+                                                    <option value="Kano">Kano</option>
+                                                    <option value="Rivers">Rivers</option>
+                                                    <option value="Bauchi">Bauchi</option>
+                                                    <option value="Jigawa">Jigawa</option>
+                                                    <option value="Benue">Benue</option>
+                                                    <option value="Anambra">Anambra</option>
+                                                    <option value="Borno">Borno</option>
+                                                    <option value="Delta">Delta</option>
+                                                    <option value="Niger">Niger</option>
+                                                    <option value="Imo">Imo</option>
+                                                    <option value="Akwa Ibom">Awka Ibom</option>
+                                                    <option value="Ogun">Ogun</option>
+                                                    <option value="Sokoto">Sokoto</option>
+                                                    <option value="Ondo">Ondo</option>
+                                                    <option value="Osun">Osun</option>
+                                                    <option value="Kogi">Kogi</option>
+                                                    <option value="Zamfara">Zamfara</option>
+                                                    <option value="Enugu">Enugu</option>
+                                                    <option value="Kebbi">Kebbi</option>
+                                                    <option value="Edo">Edo</option>
+                                                    <option value="Plateau">Plateau</option>
+                                                    <option value="Adamawa">Adamawa</option>
+                                                    <option value="Cross RIver">Cross RIver</option>
+                                                    <option value="Abia">Abia</option>
+                                                    <option value="Ekiti">Ekiti</option>
+                                                    <option value="Kwara">Kwara</option>
+                                                    <option value="Gombe">Gombe</option>
+                                                    <option value="Yobe">Yobe</option>
+                                                    <option value="Taraba">Taraba</option>
+                                                    <option value="Ebonyi">Ebonyi</option>                                            
+                                                    <option value="Nasarawa">Nasarawa</option>                                            
+                                                    <option value="Bayelsa">Bayelsa</option>                                            
+                                                    <option value="FCT">FCT</option>                                            
+
                                                 </select>                                
                                                 <!-- <input class="form-control form-control-lg" type="text" placeholder="Search for location"> -->
                                                 <!-- <div class="input-group mb-3">
@@ -175,21 +207,14 @@
                                     <div class="row">
                                         <div class="col-lg-4 col-sm-6">
                                             <div>
-                                                <p>What you'd like to find?</p>
-                                                <input style="font-size: 1rem;" class="form-control form-control-lg" type="text" placeholder="Search churches, choirs, band">
+                                                <p>From</p>
+                                                <input class="form-control" type="date" placeholder="">                                
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-sm-6">
                                             <div>
-                                                <p>Where to look for?</p>
-                                                <select name="category" id="" class="w-100">
-                                                    <option value="">Select State</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                </select>                                
+                                                <p>To</p>
+                                                <input class="form-control" type="date" placeholder="">                                
                                                 <!-- <input class="form-control form-control-lg" type="text" placeholder="Search for location"> -->
                                                 <!-- <div class="input-group mb-3">
                                                     <input type="text" class="form-control form-control-lg" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
@@ -201,22 +226,54 @@
                                         </div>
                                         <div class="col-lg-4 col-sm-6">
                                             <div>
-                                                <p>In what category?</p>
-                                                <select name="category" id="" class="w-100">
-                                                    <option value="">Select Category</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
+                                                <p>State</p>
+                                                <select name="State" id="" class="w-100">
+                                                    <option value="">Select State</option>
+                                                    <option value="Lagos">Lagos</option>
+                                                    <option value="Oyo">Oyo</option>
+                                                    <option value="Kaduna">Kaduna</option>
+                                                    <option value="Kano">Kano</option>
+                                                    <option value="Rivers">Rivers</option>
+                                                    <option value="Bauchi">Bauchi</option>
+                                                    <option value="Jigawa">Jigawa</option>
+                                                    <option value="Benue">Benue</option>
+                                                    <option value="Anambra">Anambra</option>
+                                                    <option value="Borno">Borno</option>
+                                                    <option value="Delta">Delta</option>
+                                                    <option value="Niger">Niger</option>
+                                                    <option value="Imo">Imo</option>
+                                                    <option value="Akwa Ibom">Awka Ibom</option>
+                                                    <option value="Ogun">Ogun</option>
+                                                    <option value="Sokoto">Sokoto</option>
+                                                    <option value="Ondo">Ondo</option>
+                                                    <option value="Osun">Osun</option>
+                                                    <option value="Kogi">Kogi</option>
+                                                    <option value="Zamfara">Zamfara</option>
+                                                    <option value="Enugu">Enugu</option>
+                                                    <option value="Kebbi">Kebbi</option>
+                                                    <option value="Edo">Edo</option>
+                                                    <option value="Plateau">Plateau</option>
+                                                    <option value="Adamawa">Adamawa</option>
+                                                    <option value="Cross RIver">Cross RIver</option>
+                                                    <option value="Abia">Abia</option>
+                                                    <option value="Ekiti">Ekiti</option>
+                                                    <option value="Kwara">Kwara</option>
+                                                    <option value="Gombe">Gombe</option>
+                                                    <option value="Yobe">Yobe</option>
+                                                    <option value="Taraba">Taraba</option>
+                                                    <option value="Ebonyi">Ebonyi</option>                                            
+                                                    <option value="Nasarawa">Nasarawa</option>                                            
+                                                    <option value="Bayelsa">Bayelsa</option>                                            
+                                                    <option value="FCT">FCT</option>                                            
+
                                                 </select>
                                             </div>
                                         </div>
-                                        <div class="col-lg-4">
+                                        <div class="col-lg-6">
                                             <p class="mt-3">There are over <sstrong>111</sstrong> listings for you to search from.</p>
                                         </div>
-                                        <div class="col-lg-4"></div>
-                                        <div class="col-lg-2"></div>
+                                        <div class="col-lg-3"></div>
+                                        <div class="col-lg-1"></div>
                                         <div class="col-lg-2">
                                             <button type="submit" class="btn btn-lg btn-danger mt-3 w-100"><i class="fas fa-search ml-2 mr-3"></i>Search</button>
                                         </div>
@@ -226,17 +283,17 @@
                             <div class="tab-pane fade" id="friends" role="tabpanel" aria-labelledby="friends-tab">
                                 <form action="">
                                     <div class="row">
-                                        <div class="col-lg-4 col-sm-6">
+                                        <div class="col-lg-7 col-sm-6">
                                             <div>
-                                                <p>What you'd like to find?</p>
+                                                <p>Enter Full Name</p>
                                                 <input style="font-size: 1rem;" class="form-control form-control-lg" type="text" placeholder="Search churches, choirs, band">
                                             </div>
                                         </div>
-                                        <div class="col-lg-4 col-sm-6">
+                                        <div class="col-lg-5 col-sm-6">
                                             <div>
-                                                <p>Where to look for?</p>
+                                                <p>Category</p>
                                                 <select name="category" id="" class="w-100">
-                                                    <option value="">Select State</option>
+                                                    <option value="">Select Category</option>
                                                     <option value="">Option 1</option>
                                                     <option value="">Option 1</option>
                                                     <option value="">Option 1</option>
@@ -252,7 +309,7 @@
                                                 </div> -->
                                             </div>
                                         </div>
-                                        <div class="col-lg-4 col-sm-6">
+                                        <!-- <div class="col-lg-4 col-sm-6">
                                             <div>
                                                 <p>In what category?</p>
                                                 <select name="category" id="" class="w-100">
@@ -264,7 +321,7 @@
                                                     <option value="">Option 1</option>
                                                 </select>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <div class="col-lg-4">
                                             <p class="mt-3">There are over <sstrong>111</sstrong> listings for you to search from.</p>
                                         </div>
@@ -403,9 +460,9 @@
                 <div class="add-ministry">
                     <div class="container add-ministry-sub text-justify pt-4 pb-4">
                         <h1 class="h1 text-center text-uppercase mb-5">ADD MINISTRY</h1>
-                        <p>You don't have to walk many miles beforeyou find a Bible believeing Church to call your home</p>
+                        <p>You don't have to walk many miles before you find a Bible believeing Church to call your home</p>
                         <p>Just sit back and browse through our various list of Churches, you can also find nearby churches to save your stress of going too far</p>
-                        <p>Do you have an event coming up? Own a tight Live Band? IS your choir really dope that they deserve recognition? OWn a ministry or just started one? Don't worry, We got you!</p>
+                        <p>Do you have an event coming up? Own a tight Live Band? IS your choir really dope that they deserve recognition? Own a ministry or just started one? Don't worry, We got you!</p>
                         <p>Adding your listing to wakachurch is very fast and super easy. Let visitors see your Church, Choir, Bands & Events first when they browse through wakachurch</p>
                         <p class="font-weight-bold text-center mt-5">We bring the people closer to the Church</p>
                         <div class="text-center mx-auto mt-5">
@@ -975,8 +1032,8 @@
         <section id="section-9">
             <div class="container">
                 <div class="discover-header text-center">
-                    <h1 class="mb-5">Discover New Churches, Choirs and Bands</h1>
-                    <h6 class="text-purple">Discover and follow churches, choirs & bands</h6>
+                    <h1 class="mb-5">Discover New Members</h1>
+                    <h6 class="text-purple">Discover and follow new members going to your church and others</h6>
                 </div>
             </div>
             <div class="container">
