--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                         <p>You don't have to walk many miles before you find a Bible believeing Church to call your home</p>
                         <p>Just sit back and browse through our various list of Churches, you can also find nearby churches to save your stress of going too far</p>
                         <p>Do you have an event coming up? Own a tight Live Band? IS your choir really dope that they deserve recognition? Own a ministry or just started one? Don't worry, We got you!</p>
-                        <p>Adding your listing to wakachurch is very fast and super easy. Let visitors see your Church, Choir, Bands & Events first when they browse through wakachurch</p>
+                        <p>Adding your listing to wakachurch is very fast and super easy. Let visitors see your Church, Choir, Bands & Events first when they browse through wakachurch.</p>
                         <p class="font-weight-bold text-center mt-5">We bring the people closer to the Church</p>
                         <div class="text-center mx-auto mt-5">
                             <a href="#" class="btn d-inline btn-warning mr-3">Add Ministry</a>
