--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
                                         <div class="col-lg-4 col-sm-6">
                                             <div>
                                                 <p>From</p>
-                                                <input class="form-control" type="date" placeholder="">                                
+                                                <input class="form-control" type="date" placeholder="From">                                
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-sm-6">
                                             <div>
                                                 <p>To</p>
-                                                <input class="form-control" type="date" placeholder="">                                
+                                                <input class="form-control" type="date" placeholder="To">                                
                                                 <!-- <input class="form-control form-control-lg" type="text" placeholder="Search for location"> -->
                                                 <!-- <div class="input-group mb-3">
                                                     <input type="text" class="form-control form-control-lg" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
