--- a/index.html
+++ b/index.html
@@ -183,11 +183,9 @@
                                                 <p>In what category?</p>
                                                 <select name="category" id="" class="w-100">
                                                     <option value="">Select Category</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
+                                                    <option value="">Church</option>
+                                                    <option value="">Choir</option>
+                                                    <option value="">Band</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -270,7 +268,7 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
-                                            <p class="mt-3">There are over <sstrong>111</sstrong> listings for you to search from.</p>
+                                            <!-- <p class="mt-3">There are over <sstrong>111</sstrong> listings for you to search from.</p> -->
                                         </div>
                                         <div class="col-lg-3"></div>
                                         <div class="col-lg-1"></div>
@@ -286,7 +284,7 @@
                                         <div class="col-lg-7 col-sm-6">
                                             <div>
                                                 <p>Enter Full Name</p>
-                                                <input style="font-size: 1rem;" class="form-control form-control-lg" type="text" placeholder="Search churches, choirs, band">
+                                                <input style="font-size: 1rem;" class="form-control form-control-lg" type="text" placeholder="Search Friends">
                                             </div>
                                         </div>
                                         <div class="col-lg-5 col-sm-6">
@@ -323,7 +321,7 @@
                                             </div>
                                         </div> -->
                                         <div class="col-lg-4">
-                                            <p class="mt-3">There are over <sstrong>111</sstrong> listings for you to search from.</p>
+                                            <!-- <p class="mt-3">There are over <sstrong>111</sstrong> listings for you to search from.</p> -->
                                         </div>
                                         <div class="col-lg-4"></div>
                                         <div class="col-lg-2"></div>
