--- a/index.html
+++ b/index.html
@@ -292,11 +292,9 @@
                                                 <p>Category</p>
                                                 <select name="category" id="" class="w-100">
                                                     <option value="">Select Category</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
-                                                    <option value="">Option 1</option>
+                                                    <option value="">Church</option>
+                                                    <option value="">Choir</option>
+                                                    <option value="">Band</option>
                                                 </select>                                
                                                 <!-- <input class="form-control form-control-lg" type="text" placeholder="Search for location"> -->
                                                 <!-- <div class="input-group mb-3">
