Add listing Form Initiated

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                         <p>Adding your listing to wakachurch is very fast and super easy. Let visitors see your Church, Choir, Bands & Events first when they browse through wakachurch.</p>
                         <p class="font-weight-bold text-center mt-5">We bring the people closer to the Church</p>
                         <div class="text-center mx-auto mt-5">
-                            <a href="#" class="btn d-inline btn-warning mr-3">Add Ministry</a>
+                            <a href="add-listing/index.html" class="btn d-inline btn-warning mr-3">Add Ministry</a>
                             <a href="#" class="btn d-inline btn-warning">Add Event</a>
                         </div>                    
                     </div class="add-ministry-sub">
