--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -137,12 +137,86 @@
                                     </div>
                                 </div>
                             </div>
-                                                                                                                                                                       
+
                         </div>                        
                        
                     </form>
                 </div>
             </div>
-        </section>
+        </section>                
     </main>
-</body>
+    <footer>
+        <div class="container pb-2">
+            <div class="pt-5 pb-5 text-left">
+                <h1>WAKACHURCH</h1>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="p-3 ministries">
+                        <div>
+                            <h5>236,000 Ministries</h5>
+                            <p class="font-weight-bold">NATIONWIDE</p>                                
+                        </div>
+                        <div class="mt-5">
+                            <h5>1,000,000 Registered Users</h5>
+                            <p class="font-weight-bold">UNIQUE USERS</p>                                
+                        </div>
+                        <div class="mt-5 ">
+                            <h5>1,000 Reviews</h5>
+                            <p class="font-weight-bold">SHARED</p>                                
+                        </div>                            
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 discover">
+                        <h3>DISCOVER</h3>
+                        <div class="mt-4">
+                            <a href="#" class="mb-0 font-weight-bold">All Ministries</a>
+                            <a href="#" class="mb-0 font-weight-bold">All Events</a>
+                            <a href="#" class="mb-0 font-weight-bold">Recently Reviewed</a>
+                            <a href="#" class="mb-0 font-weight-bold">Recently Added Churches</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 company">
+                        <h3>COMPANY</h3>
+                        <div class="mt-4">
+                            <a href="#" class="mb-0 font-weight-bold">Team</a>
+                            <a href="#" class="mb-0 font-weight-bold">About Us</a>
+                            <a href="#" class="mb-0 font-weight-bold">Contact Us</a>
+                            <a href="#" class="mb-0 font-weight-bold">Teams & privacy</a>
+                            <a href="#" class="mb-0 font-weight-bold">Write us a Feedback</a>
+                        </div>
+                    </div>                        
+                </div>
+            </div>
+            <div class="text-center mt-3">
+                <h2>Follow Us!</h2>
+                <div class="social-media">
+                    <a class="mr-1" href="#"><i class="fab fa-facebook fa-1x"></i></a>
+                    <a class="mr-1" href="#"><i class="fab fa-instagram fa-1x"></i></a>
+                    <a class="mr-1" href="#"><i class="fab fa-twitter-square fa-1x"></i></a>
+                    <a href="#">@wakachurch</a>
+                </div>
+            </div>
+        </div>
+        <div class="copy">
+            <div class="text-center pt-3">
+                <p class="mb-0 pb-2"><strong>Copyright</strong> &copy; 2019 Wakachurch</p>
+            </div>
+        </div>
+        <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a> 
+    </footer>              
+</body>    
+
+<!-- script -->
+<!-- Bootstrap -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+<script src="main.js"></script>
+</html>
