--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -206,7 +206,7 @@
                 <p class="mb-0 pb-2"><strong>Copyright</strong> &copy; 2019 Wakachurch</p>
             </div>
         </div>
-        <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a> 
+        <!-- <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>  -->
     </footer>              
 </body>    
 
